--- a/app.json
+++ b/app.json
@@ -1,14 +1,15 @@
 {
   "expo": {
-    "name": "mobile",
+    "name": "nlw-heat-mobile",
     "slug": "mobile",
     "version": "1.0.0",
+    "scheme": "nlw-heat-mobile",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#121214"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
